--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,11 @@
   "name": "job-tracker-client",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "generate-icons": "node generate-icons.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run generate-icons && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,6 +18,7 @@
     "@vitejs/plugin-vue": "^5.1.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.4.0",
     "vite": "^5.4.0"
   }
