--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,28 @@
 services:
+  oauth2-proxy:
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
+    ports:
+      - "${LISTEN_PORT:-3000}:4180"
+    environment:
+      - OAUTH2_PROXY_PROVIDER=oidc
+      - OAUTH2_PROXY_OIDC_ISSUER_URL=${OIDC_ISSUER_URL}
+      - OAUTH2_PROXY_CLIENT_ID=${OIDC_CLIENT_ID}
+      - OAUTH2_PROXY_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
+      - OAUTH2_PROXY_COOKIE_SECRET=${COOKIE_SECRET}
+      - OAUTH2_PROXY_REDIRECT_URL=${PUBLIC_URL}/oauth2/callback
+      - OAUTH2_PROXY_UPSTREAMS=http://job-tracker:3000
+      - OAUTH2_PROXY_HTTP_ADDRESS=0.0.0.0:4180
+      - OAUTH2_PROXY_EMAIL_DOMAINS=*
+      - OAUTH2_PROXY_SCOPE=openid profile email
+      - OAUTH2_PROXY_COOKIE_SECURE=${COOKIE_SECURE:-true}
+      - OAUTH2_PROXY_REVERSE_PROXY=true
+    depends_on:
+      - job-tracker
+
   job-tracker:
     build: .
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     volumes:
       - ./data:/app/data
       - ./uploads:/app/uploads
