--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - OAUTH2_PROXY_SCOPE=openid profile email
       - OAUTH2_PROXY_COOKIE_SECURE=${COOKIE_SECURE:-true}
       - OAUTH2_PROXY_REVERSE_PROXY=true
+      - OAUTH2_PROXY_SKIP_PROVIDER_BUTTON=true
     depends_on:
       - job-tracker
 
