--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,10 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "sharp": "^0.33.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.4.0"
+    "@tailwindcss/vite": "^4.2.0",
+    "@vitejs/plugin-vue": "^6.0.4",
+    "sharp": "^0.34.5",
+    "tailwindcss": "^4.2.0",
+    "vite": "^7.3.1"
   }
 }
