Add multi-user support with per-user data isolation
Scope all application data by user email from X-Forwarded-Email header
(set by oauth2-proxy). Adds users table, auth middleware, /api/me endpoint,
admin view toggle (ADMIN_EMAILS env var), and frontend user display.
Existing data is claimed by the first user to log in after upgrade.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     build: .
     expose:
       - "3000"
+    environment:
+      - ADMIN_EMAILS=${ADMIN_EMAILS}
     volumes:
       - ./data:/app/data
       - ./uploads:/app/uploads
