--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ LISTEN_PORT=3000
 
 # Set to false if not using HTTPS (e.g. local dev)
 COOKIE_SECURE=true
+
+# Comma-separated list of admin email addresses (can view all users' applications)
+ADMIN_EMAILS=admin@example.com
