Fix admin toggle buttons and ADMIN_EMAILS default
Toggle buttons now set explicit values instead of always flipping,
preventing double-toggle when clicking the active button. Default
ADMIN_EMAILS to empty in docker-compose.yml to avoid warnings.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     expose:
       - "3000"
     environment:
-      - ADMIN_EMAILS=${ADMIN_EMAILS}
+      - ADMIN_EMAILS=${ADMIN_EMAILS:-}
     volumes:
       - ./data:/app/data
       - ./uploads:/app/uploads
