--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,26 @@ env:
   IMAGE_NAME: ghcr.io/fergus/job-tracker
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: server/package-lock.json
+
+      - name: Install server dependencies
+        run: cd server && npm ci
+
+      - name: Run API tests
+        run: cd server && npm test
+
   docker-build:
     runs-on: ubuntu-latest
+    needs: test
     permissions:
       contents: read
       packages: write
