--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,16 @@
   "name": "job-tracker-server",
   "version": "0.3.2",
   "private": true,
+  "scripts": {
+    "test": "node --test test/api.test.js"
+  },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "supertest": "^7.2.2"
   }
 }
